--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         margin: 0;
       }
       div {
-        border: 10px solid black;
+        margin-top: 10px;
+        height: 30vh;
+        border: 5px dashed black;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -20,22 +22,18 @@
       }
       div.box-1 {
         width: 100vw;
-        height: 30vh;
         background: red;
       }
       div.box-2 {
         width: 100sw;
-        height: 30vh;
         background: blue;
       }
       div.box-2 {
         width: 100lw;
-        height: 30vh;
         background: blue;
       }
       div.box-3 {
         width: 100dw;
-        height: 30vh;
         background: yellow;
       }
     </style>
